Added all fragments, ViewPager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="invest">Invest</string>
     <string name="orders">Orders</string>
     <string name="portfolio">Portfolio</string>
+    <string name="positions">Positions</string>
+    <string name="holdings">Holdings</string>
 </resources>
