Added recycler view and adapters

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="portfolio">Portfolio</string>
     <string name="positions">Positions</string>
     <string name="holdings">Holdings</string>
+    <string name="positions_fragment">Positions Fragment</string>
 </resources>
