--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Sidhant_Verma_Demo</string>
+    <string name="app_name">Demo</string>
     <string name="funds_fragment">Funds Fragment</string>
     <string name="invest_fragment">Invest Fragment</string>
     <string name="orders_fragment">Orders Fragment</string>
