--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="positions">Positions</string>
     <string name="holdings">Holdings</string>
     <string name="positions_fragment">Positions Fragment</string>
+    <string name="profit_amp_loss"><![CDATA[Profit & Loss*]]></string>
+    <string name="current_value">Current value*</string>
+    <string name="total_investment">Total investment*</string>
+    <string name="today_s_profit_amp_loss"><![CDATA[Today\'s Profit & Loss*]]></string>
 </resources>
