--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="current_value">Current value*</string>
     <string name="total_investment">Total investment*</string>
     <string name="today_s_profit_amp_loss"><![CDATA[Today\'s Profit & Loss*]]></string>
+    <string name="net_qty">NET QTY:</string>
+    <string name="ltp">LTP:</string>
+    <string name="p_amp_l">P&amp;L:</string>
 </resources>
